tests/fixtures/errors/missing_struct_field.gcl
// error: missing fields in struct construction
pub dim Velocity = Length / Time;

pub type Transfer {
    dv1: Velocity,
    dv2: Velocity,
}

param v: Velocity = 100.0 m/s;
node bad: Transfer = Transfer { dv1: @v};
